--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-data-binding></app-data-binding>
+<h1 class="text-3xl font-bold underline">
+    Hello this is typescript in action!
+    </h1>
