--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1 class="text-3xl font-bold underline">
-    Hello this is typescript in action!
-    </h1>
+
+
+<app-navbar></app-navbar>
+<app-task-form></app-task-form>
